# activitypub-federation-rust

./: .drone.yml  .gitignore  .rustfmt.toml  .woodpecker.yml  Cargo.toml  README.md
.github/workflows/: check.yml  ethicalcheck.yml
derive/: Cargo.toml
derive/src/: lib.rs
docs/: 01_intro.md  02_overview.md  03_federating_users.md  04_federating_posts.md  05_configuration.md  06_http_endpoints_axum.md  07_fetching_data.md  08_receiving_activities.md  09_sending_activities.md  10_fetching_objects_with_unknown_type.md
examples/: README.md
examples/federation/: error.rs  instance.rs  main.rs
examples/federation-actix/: error.rs  instance.rs  main.rs  utils.rs
examples/federation-actix/activities/: accept.rs
examples/federation-actix/objects/: note.rs  person.rs
examples/federation-axum/: error.rs  instance.rs  main.rs
examples/federation-axum/activities/: accept.rs  create_note.rs  follow.rs
examples/federation-axum/objects/: note.rs  person.rs
examples/federation/activities/: create_note.rs  follow.rs
examples/federation/objects/: note.rs  person.rs
examples/live_federation/: database.rs  error.rs  http.rs  main.rs  utils.rs
examples/live_federation/activities/: create_post.rs  mod.rs
examples/live_federation/objects/: person.rs  post.rs
examples/local_federation/: error.rs  instance.rs  main.rs  utils.rs
examples/local_federation/activities/: accept.rs  create_post.rs  follow.rs  mod.rs
examples/local_federation/actix_web/: http.rs
examples/local_federation/axum/: http.rs  mod.rs
examples/local_federation/objects/: mod.rs  person.rs  post.rs
examples/simple_federation/: instance.rs  main.rs
examples/simple_federation/activities/: accept.rs  create_note.rs  follow.rs
examples/simple_federation/actix_web/: http.rs  mod.rs
examples/simple_federation/axum/: http.rs  mod.rs
examples/simple_federation/objects/: note.rs  person.rs
src/: activity_queue.rs  activity_sending.rs  config.rs  data.rs  error.rs  http_signatures.rs  lib.rs  rate_limit.rs  request_data.rs  reqwest_shim.rs  traits.rs  url.rs  utils.rs  webfinger.rs
src/activity_queue/: mod.rs  queue.rs  request.rs  retry_queue.rs  retry_worker.rs  util.rs  worker.rs
src/actix_web/: http_compat.rs  inbox.rs  middleware.rs  mod.rs  response.rs
src/axum/: inbox.rs  json.rs  middleware.rs  mod.rs
src/core/: activity_queue.rs  http_signatures.rs  inbox.rs  mod.rs  object_id.rs  signatures.rs
src/core/actix/: inbox.rs  middleware.rs  mod.rs  signature.rs
src/core/actix_web/: inbox.rs  middleware.rs  mod.rs
src/core/axum/: digest.rs  inbox.rs  json.rs  middleware.rs  mod.rs  signature.rs
src/deser/: context.rs  helpers.rs  values.rs
src/fetch/: collection_id.rs  mod.rs  object_id.rs  webfinger.rs
src/protocol/: context.rs  helpers.rs  mod.rs  public_key.rs  tombstone.rs  values.rs  verification.rs
src/queue/: mod.rs  request.rs  simple_queue.rs  standard_retry_queue.rs  util.rs  worker.rs
src/traits/: either.rs  mod.rs  tests.rs
src/utils/: mod.rs  reqwest_shim.rs
