[package]
name = "activitypub_federation"
version = "0.7.0-beta.8"
edition = "2021"
description = "High-level Activitypub framework"
keywords = ["activitypub", "activitystreams", "federation", "fediverse"]
license = "AGPL-3.0"
repository = "https://github.com/LemmyNet/activitypub-federation-rust"
documentation = "https://docs.rs/activitypub_federation/"

[features]
default = ["actix-web", "axum"]
actix-web = ["dep:actix-web", "dep:http02"]
axum = ["dep:axum", "dep:tower"]
axum-original-uri = ["dep:axum", "axum/original-uri"]

[lints.rust]
warnings = "deny"
deprecated = "deny"

[lints.clippy]
perf = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
dbg_macro = "deny"
inefficient_to_string = "deny"
items-after-statements = "deny"
implicit_clone = "deny"
wildcard_imports = "deny"
cast_lossless = "deny"
manual_string_new = "deny"
redundant_closure_for_method_calls = "deny"
unwrap_used = "deny"

[dependencies]
chrono = { version = "0.4.42", features = ["clock"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
async-trait = "0.1.89"
url = { version = "2.5.8", features = ["serde"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
reqwest = { version = "0.13.1", default-features = false, features = [
  "json",
  "stream",
  "rustls",
] }
reqwest-middleware = "0.5.0"
tracing = "0.1.44"
base64 = "0.22.1"
rand = "0.8.5"
rsa = "0.9.10"
http = "1.4.0"
sha2 = { version = "0.10.9", features = ["oid"] }
thiserror = "2.0.17"
derive_builder = "0.20.2"
itertools = "0.14.0"
dyn-clone = "1.0.20"
enum_delegate = "0.2.0"
httpdate = "1.0.3"
http-signature-normalization-reqwest = { version = "0.14.0", default-features = false, features = [
  "sha-2",
  "middleware",
  "default-spawner",
] }
http-signature-normalization = "0.7.0"
bytes = "1.11.0"
futures-core = { version = "0.3.31", default-features = false }
pin-project-lite = "0.2.16"
activitystreams-kinds = "0.3.0"
regex = { version = "1.12.2", default-features = false, features = [
  "std",
  "unicode",
] }
tokio = { version = "1.49.0", features = [
  "sync",
  "rt",
  "rt-multi-thread",
  "time",
] }
futures = "0.3.31"
moka = { version = "0.12.12", features = ["future"] }
either = "1.15.0"

# Actix-web
actix-web = { version = "4.12.1", default-features = false, optional = true }
http02 = { package = "http", version = "0.2.12", optional = true }

# Axum
axum = { version = "0.8.8", features = [
  "json",
], default-features = false, optional = true }
tower = { version = "0.5.2", optional = true }

[dev-dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
env_logger = "0.11.8"
tokio = { version = "1.49.0", features = ["full"] }

[profile.dev]
strip = "symbols"
debug = 0

[[example]]
name = "local_federation"
path = "examples/local_federation/main.rs"

[[example]]
name = "live_federation"
path = "examples/live_federation/main.rs"

# Speedup RSA key generation
# https://github.com/RustCrypto/RSA/blob/master/README.md#example
[profile.dev.package.num-bigint-dig]
opt-level = 3
