[package]
name = "activitypub_federation_derive"
version = "0.2.0"
edition = "2021"
description = "High-level Activitypub framework"
license = "AGPL-3.0"
repository = "https://github.com/LemmyNet/activitypub-federation-rust"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.63", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.39"
syn = "1.0.96"
quote = "1.0.18"
